[package]
name = "art_telephone_bot"
version = "0.1.0"
authors = ["Jack Duvall <jediguy9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.8", features = ["framework", "standard_framework"] }
log = "0.4"
simple_logger = "1.6"
